tests/errors/test_17.x
// Main function may not call itself


fn main() -> void {

    main();

}
